--- a/sites/all/themes/siasar_material/sass/partials/pages/_results.scss
+++ b/sites/all/themes/siasar_material/sass/partials/pages/_results.scss
@@ -94,6 +94,10 @@ body.page-resultados {
         }
       }
     }
+
+    .feed-icon {
+      clear: both;
+    }
   }
 
 }
